SUBDIRS = SkeletalAnimation BezierPatch EnvMapping Transpacency Lighting \
ParticleFX TextureFX SkyDome BSP Common SkyPlane SkyBox CameraTrack Terrain \
RenderToTexture Water CubeMapping Dot3Bump Smoke CelShading Fresnel Shadows \
DynTex VolumeTex Grass DeferredShading

if HAVE_CEGUI
SUBDIRS += Gui FacialAnimation OceanDemo Compositor
endif


