INCLUDES = $(STLPORT_CFLAGS) $(FT2_CFLAGS) -I$(top_srcdir)/OgreMain/include -DOGRE_NONCLIENT_BUILD $(ZZIPLIB_CFLAGS) $(DEVIL_CFLAGS)

lib_LTLIBRARIES=libOgreMain.la

libOgreMain_la_SOURCES = OgreAnimation.cpp \
						 OgreAnimable.cpp \
                         OgreAnimationState.cpp \
                         OgreAnimationTrack.cpp \
                         OgreArchiveManager.cpp \
						 OgreAutoParamDataSource.cpp \
                         OgreAxisAlignedBox.cpp \
                         OgreBillboard.cpp \
						 OgreBillboardChain.cpp \
                         OgreBillboardParticleRenderer.cpp \
                         OgreBillboardSet.cpp \
                         OgreBitwise.cpp \
                         OgreBone.cpp \
                         OgreBorderPanelOverlayElement.cpp \
                         OgreCamera.cpp \
                         OgreCodec.cpp \
                         OgreColourValue.cpp \
                         OgreCommon.cpp \
                         OgreConfigFile.cpp \
                         OgreConfigOptionMap.cpp \
                         OgreController.cpp \
                         OgreControllerManager.cpp \
                         OgreCursor.cpp \
                         OgreDataStream.cpp \
                         OgreDefaultHardwareBufferManager.cpp \
						 OgreDefaultSceneQueries.cpp \
                         OgreDynLib.cpp \
                         OgreDynLibManager.cpp \
                         OgreEdgeListBuilder.cpp \
                         OgreEntity.cpp \
                         OgreEventDispatcher.cpp \
                         OgreEventProcessor.cpp \
                         OgreEventQueue.cpp \
                         OgreException.cpp \
						 OgreExternalTextureSource.cpp \
						 OgreExternalTextureSourceManager.cpp \
                         OgreFileSystem.cpp \
                         OgreFont.cpp \
                         OgreFontManager.cpp \
						 OgreFrustum.cpp \
                         OgreGpuProgram.cpp \
                         OgreGpuProgramManager.cpp \
                         OgreGpuProgramUsage.cpp \
						 OgreHardwareBufferManager.cpp \
						 OgreHardwareIndexBuffer.cpp \
						 OgreHardwareOcclusionQuery.cpp \
						 OgreHardwareVertexBuffer.cpp \
						 OgreHardwarePixelBuffer.cpp \
						 OgreHighLevelGpuProgram.cpp \
						 OgreHighLevelGpuProgramManager.cpp \
                         OgreImage.cpp \
                         OgreInput.cpp \
                         OgreInputEvent.cpp \
						 OgreKeyEvent.cpp \
                         OgreKeyFrame.cpp \
						 OgreKeyTarget.cpp \
                         OgreLight.cpp \
                         OgreLog.cpp \
                         OgreLogManager.cpp \
						 OgreManualObject.cpp \
                         OgreMaterial.cpp \
                         OgreMaterialManager.cpp \
                         OgreMaterialSerializer.cpp \
                         OgreMath.cpp \
                         OgreMatrix3.cpp \
                         OgreMatrix4.cpp \
                         OgreMemoryManager.cpp \
                         OgreMesh.cpp \
                         OgreMeshManager.cpp \
                         OgreMeshSerializer.cpp \
						 OgreMeshSerializerImpl.cpp \
                         OgreMouseEvent.cpp \
                         OgreMouseMotionTarget.cpp \
                         OgreMouseTarget.cpp \
                         OgreMovableObject.cpp \
						 OgreMovablePlane.cpp \
                         OgreNode.cpp \
                         OgreOverlay.cpp \
                         OgreOverlayContainer.cpp \
						 OgreOverlayElement.cpp \
                         OgreOverlayElementCommands.cpp \
                         OgreOverlayManager.cpp \
                         OgrePixelFormat.cpp \
                         OgrePanelOverlayElement.cpp \
                         OgreParticle.cpp \
                         OgreParticleEmitter.cpp \
                         OgreParticleEmitterCommands.cpp \
                         OgreParticleIterator.cpp \
                         OgreParticleSystem.cpp \
                         OgreParticleSystemManager.cpp \
                         OgrePass.cpp \
						 OgrePatchMesh.cpp \
                         OgrePatchSurface.cpp \
                         OgrePlane.cpp \
                         OgrePlatformManager.cpp \
						 OgrePose.cpp \
                         OgrePredefinedControllers.cpp \
						 OgreProfiler.cpp \
                         OgreProgressiveMesh.cpp \
                         OgreQuaternion.cpp \
						 OgreRectangle2D.cpp \
                         OgreRenderQueue.cpp \
						 OgreRenderQueueInvocation.cpp \
						 OgreRenderQueueSortingGrouping.cpp \
                         OgreRenderSystem.cpp \
                         OgreRenderSystemCapabilities.cpp \
                         OgreRenderTarget.cpp \
                         OgreRenderTexture.cpp \
                         OgreRenderWindow.cpp \
                         OgreResource.cpp \
                         OgreResourceBackgroundQueue.cpp \
                         OgreResourceGroupManager.cpp \
                         OgreResourceManager.cpp \
						 OgreRibbonTrail.cpp \
                         OgreRoot.cpp \
                         OgreRotationSpline.cpp \
                         OgreSceneManager.cpp \
                         OgreSceneManagerEnumerator.cpp \
                         OgreSceneNode.cpp \
                         OgreSceneQuery.cpp \
                         OgreSearchOps.cpp \
                         OgreSerializer.cpp \
						 OgreShadowCaster.cpp \
						 OgreShadowVolumeExtrudeProgram.cpp \
                         OgreSimpleRenderable.cpp \
                         OgreSimpleSpline.cpp \
                         OgreSingleton.cpp \
                         OgreSkeleton.cpp \
                         OgreSkeletonInstance.cpp \
                         OgreSkeletonManager.cpp \
                         OgreSkeletonSerializer.cpp \
						 OgreStaticGeometry.cpp \
                         OgreString.cpp \
                         OgreStringConverter.cpp \
                         OgreStringInterface.cpp \
                         OgreStringVector.cpp \
                         OgreSubEntity.cpp \
                         OgreSubMesh.cpp \
                         OgreTagPoint.cpp \
                         OgreTechnique.cpp \
                         OgreTextAreaOverlayElement.cpp \
                         OgreTexture.cpp \
                         OgreTextureManager.cpp \
                         OgreTextureUnitState.cpp \
						 OgreTimer.cpp \
                         OgreUserDefinedObject.cpp \
                         OgreVector2.cpp \
                         OgreVector3.cpp \
                         OgreVector4.cpp \
                         OgreVertexIndexData.cpp \
                         OgreViewport.cpp \
                         OgreWireBoundingBox.cpp \
                         OgreZip.cpp \
                         OgreCompositionPass.cpp \
                         OgreCompositionTargetPass.cpp \
                         OgreCompositionTechnique.cpp \
                         OgreCompositor.cpp \
                         OgreCompositorChain.cpp \
                         OgreCompositorInstance.cpp \
                         OgreCompositorManager.cpp \
                         OgreCompositorSerializer.cpp \
                         OgreCompositorScriptCompiler.cpp \
                         OgreCompiler2Pass.cpp

if USE_DEVIL
libOgreMain_la_SOURCES +=OgreILImageCodec.cpp \
                         OgreILCodecs.cpp \
                         OgreILUtil.cpp
endif

platformdir = $(libdir)
libOgreMain_la_LIBADD= $(STLPORT_LIBS) $(FT2_LIBS) $(ZZIPLIB_LIBS) $(OGRE_THREAD_LIBS)
libOgreMain_la_LDFLAGS = $(SHARED_FLAGS) -version-info @OGREMAIN_VERSION_INFO@ -Wl,-rpath,$(platformdir)
#-Wl,--version-script=$(top_srcdir)/OgreMain/src/ogremain.map

