noinst_HEADERS = OgreBspLevel.h \
                 OgreBspNode.h \
                 OgreBspPrerequisites.h \
                 OgreBspResourceManager.h \
                 OgreBspSceneManager.h \
				 OgreBspSceneNode.h \
                 OgreQuake3Level.h \
                 OgreQuake3Shader.h \
                 OgreQuake3ShaderManager.h \
                 OgreQuake3Types.h
